crates/xlate/tests/snapshots/golden_matrix__reason_tools_with_effort_none_gpt54__gpt-5.4__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Weather in Paris? Use the tool."
        }
      ]
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "get_weather",
      "description": "Get weather.",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "city": {
            "type": "string"
          }
        },
        "required": [
          "city"
        ],
        "type": "object"
      }
    }
  ],
  "reasoning": {
    "effort": "none"
  },
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
